--- a/index.html
+++ b/index.html
@@ -36,8 +36,8 @@
 <div id="container" style="border: 1px solid"></div>
 </body>
 
-<script src="./lib/x6.js"></script>
-<script src="./lib/clipboard.min.js"></script>
+<script src="https://cdn.jsdelivr.net/gh/yihuineng/ui-marker@master/lib/x6.js"></script>
+<script src="https://cdn.jsdelivr.net/gh/yihuineng/ui-marker@master/lib/clipboard.min.js"></script>
 <script>
     let graph;
     let jsonData = {
